@@ -22,6 +22,10 @@ EXCLUDE_host += \
 	gte_20040409-2w \
 	gte_20040409-3w
 
+# possibly unsupported.
+EXCLUDE_host += \
+	tcc_83_utf8_in_identifiers
+
 # Fails when compiled with clang on FreeBSD 13.1 on aarch64
 EXCLUDE_host += \
 	gte_20031003-1
@@ -373,6 +377,7 @@ EXCLUDE_ARCH_pdk += \
 	tcc_37_sprintf \
 	tcc_38_multiple_array_index \
 	tcc_49_bracket_evaluation \
+	tcc_83_utf8_in_identifiers \
 	tcc_97_utf8_string_literal \
 	tcc_109_float_struct_calling
 EXCLUDE_pdk14 += \
